Revert "Fix footer resizing on small viewport"
This reverts commit 372b0f083a42520ab076eece5b12165b0786b893.

See https://github.com/dellsystem/wikinotes/pull/223#issuecomment-54734725.

--- a/assets/css/wikinotes.less
+++ b/assets/css/wikinotes.less
@@ -41,6 +41,7 @@ section {
 }
 
 #footer {
+    position: absolute;
     width: 100%;
     margin-top: -@footer-height;
     height: @footer-height;
@@ -70,7 +71,7 @@ section {
     //background-position: 0px 40px;
     #gradient > .vertical(#E5FBFF, #B1D8E0);
     color: @grayDark;
-
+    
     div.inner {
         padding: 30px 0;
         //.box-shadow(inset 0 10px 30px rgba(0, 0, 0, 0.3));
